--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </nav>
             <div class="d-md-none col-12 text-center ">
-                <img src="/me.jpg" alt="Minha foto" class="foto-mobile">
+                <img src="/eu.jpg" alt="Minha foto" class="foto-mobile">
             </div>
             <div class="col-12 d-md-none">
                 <p class="fs-5 nome text-center"><strong>Albert Luis Pereira de Jesus</strong></p><p class="fs-6 text-center">Estudante de Engenharia de Software <br>PUC MINAS <br>2° Periodo</p>
@@ -63,10 +63,10 @@
                 <div class="container-fluid d-none d-md-block">
                     <div class="row border-bottom">
                         <div class="d-none d-md-block d-lg-none col-12 text-center mt-3">
-                            <img src="/me.jpg" alt="Minha foto" class="foto-mobile">
+                            <img src="/eu.jpg" alt="Minha foto" class="foto-mobile">
                         </div>
                         <div class="d-none d-lg-block col-lg-4 text-center mt-4 ">
-                            <img src="/me.jpg" alt="Minha foto" class="foto d-inline-flex mt-2 me-3">
+                            <img src="/eu.jpg" alt="Minha foto" class="foto d-inline-flex mt-2 me-3">
                         </div>
                         <div class="col-12 d-lg-none">
                             <p class="fs-5 nome text-center"><strong>Albert Luis Pereira de Jesus</strong></p><p class="fs-6 text-center">Estudante de Engenharia de Software <br>PUC MINAS <br>2° Periodo</p>
