--- a/arquivosC/c.html
+++ b/arquivosC/c.html
@@ -57,7 +57,7 @@
             <div class="col-9 fonte-meio ps-5 mt-5">
                 <h3 class="text-center mb-5">Projetos em C</h3>
                 <h5 class="mb-3">Sistema de gerenciamento de tarefas</h5>
-                <img src="/arquivosC/vrum vrum.png" class="vrum mb-3" alt="VrumVrum">
+                <img src="/Portifolio/arquivosC/vrum vrum.png" class="vrum mb-3" alt="VrumVrum">
                 <p>Sistema de Gerenciamento de Tarefas (C, Console Application): Implementação de um sistema simples para<br>
                     gerenciar uma loja de veículos em linguagem C. O programa terá funcionalidades que permitirão o controle<br>
                     do estoque, registro de compras e vendas e acompanhamento do desempenho da loja.
