--- a/arquivosC/c.html
+++ b/arquivosC/c.html
@@ -30,10 +30,10 @@
                     <div class="collapse navbar-collapse" id="navbarsExample01">
                     <ul class="navbar-nav me-auto mb-2">
                         <li class="nav-item">
-                            <a href="/index.html"><button class="btn tamanho-btn mt-5 "><i class="bi bi-house-door fs-4"></i><p class="ps-3 curriculo">Home</p></i></button></a>
+                            <a href="/Portifolio/index.html"><button class="btn tamanho-btn mt-5 "><i class="bi bi-house-door fs-4"></i><p class="ps-3 curriculo">Home</p></i></button></a>
                         </li>
                         <li class="nav-item">
-                            <a href="/curriculo/curriculo.html"><button class="btn tamanho-btn mt-2"><i class="bi bi-c-circle fs-4"></i><p class="ps-3 arquivos-c">Curriculo</p></i></button></a>
+                            <a href="/Portifolio/curriculo/curriculo.html"><button class="btn tamanho-btn mt-2"><i class="bi bi-c-circle fs-4"></i><p class="ps-3 arquivos-c">Curriculo</p></i></button></a>
                         </li>
                         <li class="nav-item">
                             <a href=""><button class="btn tamanho-btn mt-2"><i class="bi bi-filetype-py fs-4"></i><p class="ps-3 curriculo">Arquivos Python</p></i></button></a>
@@ -48,8 +48,8 @@
             <!--Canto Esquerdo-->
             <div class="d-none d-md-block col-md-3 border border-top-0 border-bottom-0 lado">
                 <h3 class="fonte pt-4 text-center">Portfólio</h3>
-                <a href="/index.html"><button class="btn tamanho-btn mt-5 "><i class="bi bi-house-door fs-4"></i><p class="ps-3 curriculo">Home</p></i></button></a>
-                <a href="/Curriculo/curriculo.html"><button class="btn tamanho-btn mt-2 "><i class="bi bi-card-text fs-4"><p class="ps-3 curriculo">Curriculo</p></i></button></a>
+                <a href="/Portifolio/index.html"><button class="btn tamanho-btn mt-5 "><i class="bi bi-house-door fs-4"></i><p class="ps-3 curriculo">Home</p></i></button></a>
+                <a href="/Portifolio/Curriculo/curriculo.html"><button class="btn tamanho-btn mt-2 "><i class="bi bi-card-text fs-4"><p class="ps-3 curriculo">Curriculo</p></i></button></a>
                 <a href=""><button class="btn tamanho-btn mt-2"><i class="bi bi-filetype-py fs-4"></i><p class="ps-3 curriculo">Arquivos Python</p></i></button></a>
             </div>
 
@@ -62,7 +62,7 @@
                     gerenciar uma loja de veículos em linguagem C. O programa terá funcionalidades que permitirão o controle<br>
                     do estoque, registro de compras e vendas e acompanhamento do desempenho da loja.
                 </p>
-                <a href="/arquivosC/Loja_de_Veiculos.zip"><button class="btn btn-dark mt-2"> Baixar</button></a>
+                <a href="/Portifolio/arquivosC/Loja_de_Veiculos.zip"><button class="btn btn-dark mt-2"> Baixar</button></a>
             </div>
             
         </div>
