--- a/arquivosC/c.html
+++ b/arquivosC/c.html
@@ -54,15 +54,18 @@
             </div>
 
             <!--MEIO-->
-            <div class="col-9 fonte-meio ps-5 mt-5">
+            <div class="col-9 fonte-meio  mt-5">
                 <h3 class="text-center mb-5">Projetos em C</h3>
-                <h5 class="mb-3">Sistema de gerenciamento de tarefas</h5>
-                <img src="/Portifolio/arquivosC/vrum vrum.png" class="vrum mb-3" alt="VrumVrum">
-                <p>Sistema de Gerenciamento de Tarefas (C, Console Application): Implementação de um sistema simples para<br>
-                    gerenciar uma loja de veículos em linguagem C. O programa terá funcionalidades que permitirão o controle<br>
-                    do estoque, registro de compras e vendas e acompanhamento do desempenho da loja.
-                </p>
-                <a href="/Portifolio/arquivosC/Loja_de_Veiculos.zip"><button class="btn btn-dark mt-2"> Baixar</button></a>
+                <div class="ps-3 border-bottom">
+                    <h5 class="mb-3">Sistema de gerenciamento de tarefas</h5>
+                    <img src="/arquivosC/vrum vrum.png" class="vrum mb-3" alt="VrumVrum">
+                    <p>Sistema de Gerenciamento de Tarefas (C, Console Application): Implementação de um sistema simples para<br>
+                        gerenciar uma loja de veículos em linguagem C. O programa terá funcionalidades que permitirão o controle<br>
+                        do estoque, registro de compras e vendas e acompanhamento do desempenho da loja.
+                    </p>
+                    <a href="/arquivosC/Loja_de_Veiculos.zip"><button class="btn btn-dark mt-2 mb-4"> Baixar</button></a>
+                </div>
+                
             </div>
             
         </div>
