--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -50,7 +50,7 @@
             <div class="d-none d-md-block col-md-3 border border-top-0 border-bottom-0 lado">
                 <h3 class="fonte pt-4 text-center">Portfólio</h3>
                 <a href="/Portifolio/index.html"><button class="btn tamanho-btn mt-5 "><i class="bi bi-house-door fs-4"></i><p class="ps-3 curriculo">Home</p></i></button></a>
-                <a href="">/Portifolio/arquivosC/c.html<button class="btn tamanho-btn mt-2"><i class="bi bi-c-circle fs-4"></i><p class="ps-3 arquivos-c">Arquivos C</p></i></button></a>
+                <a href="/Portifolio/arquivosC/c.html"><button class="btn tamanho-btn mt-2"><i class="bi bi-c-circle fs-4"></i><p class="ps-3 arquivos-c">Arquivos C</p></i></button></a>
                 <a href=""><button class="btn tamanho-btn mt-2"><i class="bi bi-filetype-py fs-4"></i><p class="ps-3 curriculo">Arquivos Python</p></i></button></a>
             </div>
 
