--- a/arquivosC/c.html
+++ b/arquivosC/c.html
@@ -58,7 +58,7 @@
                 <h3 class="text-center mb-5">Projetos em C</h3>
                 <div class="ps-3 border-bottom">
                     <h5 class="mb-3">Sistema de gerenciamento de tarefas</h5>
-                    <img src="/arquivosC/vrum vrum.png" class="vrum mb-3" alt="VrumVrum">
+                    <img src="/Portifolio/arquivosC/vrum vrum.png" class="vrum mb-3" alt="VrumVrum">
                     <p>Sistema de Gerenciamento de Tarefas (C, Console Application): Implementação de um sistema simples para<br>
                         gerenciar uma loja de veículos em linguagem C. O programa terá funcionalidades que permitirão o controle<br>
                         do estoque, registro de compras e vendas e acompanhamento do desempenho da loja.
