atualizações de dados do curriculo.html

--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -61,14 +61,13 @@
                 <h6 class="cor"><strong>Objetivo</strong></h6>
                 <p class="tamanho">Buscar uma oportunidade de estágio em TI ou posição de auxiliar/assistente de TI para aplicar e aprimorar meus <br>conhecimentos em programação e contribuir para o crescimento da empresa.</p>
                 <h6 class="cor"><strong>Resumo</strong></h6>
-                <p class="tamanho">Estudante de Engenharia de Software no segundo período da PUC Minas, com conhecimento básico em linguagens <br>
-                    como HTML, CSS, JavaScript, Bootstrap , C e Python(Estou aprendendo por fora da faculdade atravez do curso <br>
-                    online na Curso em Video). Motivado, aprendo rapidamente e estou ansioso para entrar no mercado de trabalho <br>
-                    de tecnologia.
+                <p class="tamanho">Estudante de Engenharia de Software no terceiro período da PUC Minas, com conhecimento básico em algumas <br>
+                    linguagens de programação e metodologias ageis. Motivado, aprendo rapidamente e estou ansioso para entrar no mercado de <br>
+                    trabalho de tecnologia.
                 </p>
                 <h6 class="cor"><strong>Educação</strong></h6>
                 <p class="tamanho">
-                    <strong>Engenharia de Software(Segundo Periodo)</strong><br>
+                    <strong>Engenharia de Software(Terceiro Periodo)</strong><br>
                     PUC MINAS, Fevereiro de 2023 – Presente <br><br>
                     <strong>Curso de Python</strong><br>
                     Cursos em Video, Agosto de 2023 - Presente <br><br>
@@ -77,9 +76,9 @@
                 </p>
                 <h6 class="cor"><strong>Habilidades Técnicas:</strong></h6>
                 <p class="tamanho">
-                    - Linguagens: HTML, CSS, JavaScript, Framework Bootstrap, C, Python (conhecimento básico) <br>
+                    - Linguagens: HTML, CSS, JavaScript, Framework Bootstrap, C, Python, React.js, JAVA, MySQL (conhecimento intermediario) <br>
                     - Ferramentas de Produtividade: Word (razoável), Excel (Basico), PowerPoint (razoável), BPMN (razoável) <br>
-                    - Metodologias Ágeis: Scrum e Kanban (razoável)
+                    - Metodologias Ágeis: Scrum e Kanban (intermediario)
                 </p>
                 <h6 class="cor"><strong>Projetos Acadêmicos Relevantes:</strong></h6>
                 <p class="tamanho">
@@ -91,17 +90,17 @@
                 </p>
                 <h6 class="cor"><strong>Experiência Profissional</strong></h6>
                 <p class="tamanho">
-                    <strong>Ajudante de motorista</strong> <br>
-                    Planeta Comércio Distribuição e Incorporação LTDA - Contagem, MG <br>
-                    Setembro de 2021 a Março de 2023 <br>
-                    Carregamento de caminhões com paleteira e transpaleteira elétrica, separação de pedidos e descargade mercadorias <br>
-                    em rota de entregas. <br> <br>
                     <strong>Estagio em Sistemas de Geoprocessamento</strong> <br> 
                     Prefeitura Municipal de Esmeraldas - Esmeraldas, MG <br>
                     Outubro de 2023 - Presente <br>
                     Atividades nas áreas de geoprocessamento, planejamento urbano, gestão territorial e analises técnicas dos processos <br> 
                     contínuos do setor com o uso do softwares e aplicações de geoprocessamento e afins. Elaboração de informações básicas, <br>
                     SIG - Sistema de Informações Geográficas, QGIS - Google Earth Pro, Banco de Dados, Programação( customização de aplicações). <br>
+                    <strong>Ajudante de motorista</strong> <br>
+                    Planeta Comércio Distribuição e Incorporação LTDA - Contagem, MG <br>
+                    Setembro de 2021 a Março de 2023 <br>
+                    Carregamento de caminhões com paleteira e transpaleteira elétrica, separação de pedidos e descargade mercadorias <br>
+                    em rota de entregas. <br> <br>
                 </p>
                 <h6 class="cor"><strong>Certificações e licenças</strong></h6>
                 <p class="tamanho">
