--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -57,13 +57,13 @@
             <!--Meio direita-->
             <div class="col-9 fonte-meio ps-5 mt-5">
                 <h5 class=""><strong>Albert Luis Pereira de Jesus</strong></h5>
-                <p class="tamanho"> São Francisco - Belo Horizonte <br>albertluis123y88@gmail.com <br>(31) 998663664</p>
+                <p class="tamanho"> Belo Horizonte <br>albertluis123y88@gmail.com <br>(31) 998663664</p>
                 <h6 class="cor"><strong>Objetivo</strong></h6>
-                <p class="tamanho">Buscar uma oportunidade de estágio em TI ou posição de auxiliar/assistente de TI para aplicar e aprimorar meus <br>conhecimentos em programação e contribuir para o crescimento da empresa.</p>
+                <p class="tamanho">Buscar uma oportunidade de estágio em TI</p>
                 <h6 class="cor"><strong>Resumo</strong></h6>
-                <p class="tamanho">Estudante de Engenharia de Software no terceiro período da PUC Minas, com conhecimento básico em algumas <br>
-                    linguagens de programação e metodologias ageis. Motivado, aprendo rapidamente e estou ansioso para entrar no mercado de <br>
-                    trabalho de tecnologia.
+                <p class="tamanho">Estudante de Engenharia de Software no terceiro período da PUC Minas, com conhecimento básico em linguagens<br>
+                     de programação, montagem e manutenção de computadores. Motivado, aprendo rapidamente e estou ansioso para entrar no mercado <br>
+                    de trabalho da tecnologia.
                 </p>
                 <h6 class="cor"><strong>Educação</strong></h6>
                 <p class="tamanho">
@@ -76,15 +76,17 @@
                 </p>
                 <h6 class="cor"><strong>Habilidades Técnicas:</strong></h6>
                 <p class="tamanho">
-                    - Linguagens: HTML, CSS, JavaScript, Framework Bootstrap, C, Python, React.js, JAVA, MySQL (conhecimento intermediario) <br>
-                    - Ferramentas de Produtividade: Word (razoável), Excel (Basico), PowerPoint (razoável), BPMN (razoável) <br>
-                    - Metodologias Ágeis: Scrum e Kanban (intermediario)
+                    - Linguagens de Programação: HTML, CSS, JavaScript, Framework Bootstrap, C, Python, React, JAVA<br>
+                    - Pacote Office: Word e Excel<br>
+                    - Metodologias Ágeis: Scrum e Kanban
                 </p>
                 <h6 class="cor"><strong>Projetos Acadêmicos Relevantes:</strong></h6>
                 <p class="tamanho">
-                    1. Desenvolvimento de um Site e-commerce (HTML, CSS, JavaScript): Desenvolvimento de um site para exibir <br>
+                    <strong>1.Sistema de gestão para empresas de mudanças (React.js, Java Spring, HTML, JavaScript, CSS):</strong> Aplicação WEB responsável pelo <br>
+                    controle das frotas, equipes e fornecedores e serviços de uma empresa de mudança.
+                    <strong>2. Desenvolvimento de um Site e-commerce (HTML, CSS, JavaScript):</strong> Desenvolvimento de um site para exibir <br>
                     produtos de variados tipos atraves de uma api. <br>
-                    2. Sistema de Gerenciamento de Tarefas (C, Console Application): Implementação de um sistema simples para <br>
+                    <strong>3. Sistema de Gerenciamento de Tarefas (C, Console Application):</strong> Implementação de um sistema simples para <br>
                     gerenciar uma loja de veículos em linguagem C. O programa terá funcionalidades que permitirão o controle <br>
                     do estoque, registro de compras e vendas e acompanhamento do desempenho da loja. 
                 </p>
