atualizaçoes para desafio da CH2M

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                             <a href="/Portifolio/curriculo/curriculo.html"><button class="btn tamanho-btn "><i class="bi bi-card-text fs-4"><p class="ps-3 curriculo">Curriculo</p></i></button></a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Portifolio/arquivosC/c.main"><button class="btn tamanho-btn mt-2"><i class="bi bi-c-circle fs-4"></i><p class="ps-3 arquivos-c">Arquivos C</p></i></button></a>
+                            <a href="/Portifolio/arquivosC/c.main"><button class="btn tamanho-btn mt-2"><i class="bi bi-award fs-4"></i></i><p class="ps-3 arquivos-c">Projetos</p></i></button></a>
                         </li>
                         <li class="nav-item">
-                            <a href=""><button class="btn tamanho-btn mt-2"><i class="bi bi-filetype-py fs-4"></i><p class="ps-3 curriculo">Arquivos Python</p></i></button></a>
+                            <a href="https://github.com/SrGuzz"><button class="btn tamanho-btn mt-2"><i class="bi bi-github fs-4"></i><p class="ps-3 arquivos-c">GitHub</p></button></a>
                         </li>
                     </ul>
                   </div>
@@ -46,16 +46,22 @@
                 <img src="/Portifolio/me.jpg" alt="Minha foto" class="foto-mobile">
             </div>
             <div class="col-12 d-md-none">
-                <p class="fs-5 nome text-center"><strong>Albert Luis Pereira de Jesus</strong></p><p class="fs-6 text-center">Estudante de Engenharia de Software <br>PUC MINAS <br>2° Periodo</p>
+                <p class="fs-5 nome text-center"><strong>Albert Luis Pereira de Jesus</strong></p><p class="fs-6 text-center">Estudante de Engenharia de Software <br>PUC MINAS <br>3° Periodo</p>
             </div>
 
             <!--Desktop-->
             <!--Canto Esquerdo-->
             <div class="d-none d-md-block col-md-3 border border-top-0 border-bottom-0 lado">
-                <h3 class="fonte pt-4 text-center">Portfólio</h3>
-                <a href="/Portifolio/curriculo/curriculo.html"><button class="btn tamanho-btn mt-5 "><i class="bi bi-card-text fs-4"><p class="ps-3 curriculo">Curriculo</p></i></button></a>
-                <a href="/Portifolio/arquivosC/c.html"><button class="btn tamanho-btn mt-2"><i class="bi bi-c-circle fs-4"></i><p class="ps-3 arquivos-c">Arquivos C</p></i></button></a>
-                <a href=""><button class="btn tamanho-btn mt-2"><i class="bi bi-filetype-py fs-4"></i><p class="ps-3 curriculo">Arquivos Python</p></i></button></a>
+                <h3 class="fonte pt-4 text-center mb-5">Portfólio</h3>
+                <div class="border-bottom">
+                    <a href="/Portifolio/curriculo/curriculo.html" ><button class="btn tamanho-btn"><i class="bi bi-card-text fs-4"><p class="ps-3 curriculo">Curriculo</p></i></button></a>
+                </div>
+                <div class="border-bottom ">
+                    <a href="/Portifolio/arquivosC/c.html" ><button class="btn tamanho-btn"><i class="bi bi-award fs-4"></i><p class="ps-3 curriculo">Projetos</p></i></button></a>
+                </div>
+                <div>
+                    <a href="https://github.com/SrGuzz" class=""><button class="btn tamanho-btn"><i class="bi bi-github fs-4"></i><p class="ps-3 arquivos-c">GitHub</p></button></a>
+                </div>
             </div>
 
             <!--Meio-->
@@ -68,16 +74,20 @@
                         <div class="d-none d-lg-block col-lg-4 text-center mt-4 ">
                             <img src="/Portifolio/me.jpg" alt="Minha foto" class="foto d-inline-flex mt-2 me-3">
                         </div>
-                        <div class="col-12 d-lg-none">
-                            <p class="fs-5 nome text-center"><strong>Albert Luis Pereira de Jesus</strong></p><p class="fs-6 text-center">Estudante de Engenharia de Software <br>PUC MINAS <br>2° Periodo</p>
+                        <div class="col-12 d-lg-none bor">
+                            <p class="fs-5 nome text-center"><strong>Albert Luis Pereira de Jesus</strong></p>
+                            <p class="fs-6 text-center">Estudante de Engenharia de Software <br>
+                                                        PUC MINAS <br>
+                                                        3° Periodo
+                            </p>
                         </div>
-                        <div class="d-none d-lg-block col-8 mb-5">
-                            <p class="fs-5 nome"><strong>Albert Luis Pereira de Jesus</strong></p><p class="fs-6">Estudante de Engenharia de Software <br>PUC MINAS <br>2° Periodo</p>
+                        <div class="d-none d-lg-block col-8 mb-2">
+                            <p class="fs-5 nome"><strong>Albert Luis Pereira de Jesus</strong></p><p class="fs-6">Estudante de Engenharia de Software <br>PUC MINAS <br>3° Periodo</p>
                         </div>
                     </div>
                 </div>
-                <h4 class="text-center mt-2 fonte-mobile">Sobre Mim</h4>
-                <div class="container mt-4">
+                <p class="nome text-center fs-3"><strong>Sobre Mim</strong></p>
+                <div class="container">
                     <div class="row">
                         <div class="d-none d-lg-block col-2"></div>
                         <div class="col-lg-8">
@@ -100,8 +110,6 @@
                                 <a href="https://wa.me/qr/7RVSS3KUBEUTN1" target="_blank"><i class="bi bi-whatsapp wpp"><p class="d-inline-flex link-dark pe-4 ps-2">Whatsapp</p></i></a>
                                 <p class="d-inline-flex link-dark pe-4">|</p>
                                 <a href="https://www.linkedin.com/in/albert-luis-053177209/" target="_blank"><i class="bi bi-linkedin " ></i><p class="d-inline-flex link-dark pe-4 ps-2">Linkedin</p></a>
-                                <p class="d-inline-flex link-dark pe-4">|</p>
-                                <a href="https://github.com/SrGuzz" target="_blank"><i class="bi bi-github git text-decoration-none " ></i><p class="d-inline-flex link-dark pe-4 ps-2">GitHub</p></a>
                             </div>
                         </div>
                     </div>
