--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -33,10 +33,10 @@
                             <a href="/Portifolio/index.html"><button class="btn tamanho-btn mt-5 "><i class="bi bi-house-door fs-4"></i><p class="ps-3 curriculo">Home</p></i></button></a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Portifolio/arquivosC/c.html"><button class="btn tamanho-btn mt-2"><i class="bi bi-c-circle fs-4"></i><p class="ps-3 arquivos-c">Arquivos C</p></i></button></a>
+                            <a href="/Portifolio/arquivosC/c.html"><button class="btn tamanho-btn mt-2"><i class="bi bi-award fs-4"></i></i><p class="ps-3 arquivos-c">Projetos</p></i></button></a>
                         </li>
                         <li class="nav-item">
-                            <a href=""><button class="btn tamanho-btn mt-2"><i class="bi bi-filetype-py fs-4"></i><p class="ps-3 curriculo">Arquivos Python</p></i></button></a>
+                            <a href="https://github.com/SrGuzz"><button class="btn tamanho-btn mt-2"><i class="bi bi-github fs-4"></i><p class="ps-3 arquivos-c">GitHub</p></button></a>
                         </li>
                     </ul>
                     </div>
@@ -48,14 +48,20 @@
 
             <!--Canto Esquerdo-->
             <div class="d-none d-md-block col-md-3 border border-top-0 border-bottom-0 lado">
-                <h3 class="fonte pt-4 text-center">Portfólio</h3>
-                <a href="/Portifolio/index.html"><button class="btn tamanho-btn mt-5 "><i class="bi bi-house-door fs-4"></i><p class="ps-3 curriculo">Home</p></i></button></a>
-                <a href="/Portifolio/arquivosC/c.html"><button class="btn tamanho-btn mt-2"><i class="bi bi-c-circle fs-4"></i><p class="ps-3 arquivos-c">Arquivos C</p></i></button></a>
-                <a href=""><button class="btn tamanho-btn mt-2"><i class="bi bi-filetype-py fs-4"></i><p class="ps-3 curriculo">Arquivos Python</p></i></button></a>
+                <h3 class="fonte pt-4 text-center mb-5">Portfólio</h3>
+                <div class="border-bottom">
+                    <a href="/Portifolio/index.html"><button class="btn tamanho-btn"><i class="bi bi-house-door fs-4"></i><p class="ps-3 curriculo">Home</p></i></button></a>
+                </div>
+                <div class="border-bottom ">
+                    <a href="/Portifolio/arquivosC/c.html" ><button class="btn tamanho-btn"><i class="bi bi-award fs-4"></i><p class="ps-3 curriculo">Projetos</p></i></button></a>
+                </div>
+                <div>
+                    <a href="https://github.com/SrGuzz" class=""><button class="btn tamanho-btn"><i class="bi bi-github fs-4"></i><p class="ps-3 arquivos-c">GitHub</p></button></a>
+                </div>
             </div>
 
             <!--Meio direita-->
-            <div class="col-9 fonte-meio ps-5 mt-5">
+            <div class="col-12 col-md-9 fonte-meio ps-5 mt-5">
                 <h5 class=""><strong>Albert Luis Pereira de Jesus</strong></h5>
                 <p class="tamanho"> Belo Horizonte <br>albertluis123y88@gmail.com <br>(31) 998663664</p>
                 <h6 class="cor"><strong>Objetivo</strong></h6>
@@ -70,20 +76,20 @@
                     <strong>Engenharia de Software(Terceiro Periodo)</strong><br>
                     PUC MINAS, Fevereiro de 2023 – Presente <br><br>
                     <strong>Curso de Python</strong><br>
-                    Cursos em Video, Agosto de 2023 - Presente <br><br>
+                    Cursos em Video, Agosto de 2023 - Setembro de 2023 <br><br>
                     <strong>Certificado de Informática</strong><br>
                     Instituto de Formação Tecnológica(INFOTEC), Novembro de 2014 a novembro de 2015. <br>
                 </p>
                 <h6 class="cor"><strong>Habilidades Técnicas:</strong></h6>
                 <p class="tamanho">
-                    - Linguagens de Programação: HTML, CSS, JavaScript, Framework Bootstrap, C, Python, React, JAVA<br>
+                    - Linguagens de Programação: HTML, CSS, JavaScript, Bootstrap, C, Python, JAVA e SpringBoot<br>
                     - Pacote Office: Word e Excel<br>
                     - Metodologias Ágeis: Scrum e Kanban
                 </p>
                 <h6 class="cor"><strong>Projetos Acadêmicos Relevantes:</strong></h6>
                 <p class="tamanho">
-                    <strong>1.Sistema de gestão para empresas de mudanças (React.js, Java Spring, HTML, JavaScript, CSS):</strong> Aplicação WEB responsável pelo <br>
-                    controle das frotas, equipes e fornecedores e serviços de uma empresa de mudança.
+                    <strong>1.Sistema de gestão para empresas de mudanças (Java Spring, HTML, JavaScript, CSS, Bootstrap):</strong> Aplicação WEB responsável pelo <br>
+                    controle das frotas, equipes e fornecedores e serviços de uma empresa de mudança.br<br>
                     <strong>2. Desenvolvimento de um Site e-commerce (HTML, CSS, JavaScript):</strong> Desenvolvimento de um site para exibir <br>
                     produtos de variados tipos atraves de uma api. <br>
                     <strong>3. Sistema de Gerenciamento de Tarefas (C, Console Application):</strong> Implementação de um sistema simples para <br>
@@ -94,7 +100,7 @@
                 <p class="tamanho">
                     <strong>Estagio em Sistemas de Geoprocessamento</strong> <br> 
                     Prefeitura Municipal de Esmeraldas - Esmeraldas, MG <br>
-                    Outubro de 2023 - Presente <br>
+                    Outubro de 2023 - Maio de 2024 <br>
                     Atividades nas áreas de geoprocessamento, planejamento urbano, gestão territorial e analises técnicas dos processos <br> 
                     contínuos do setor com o uso do softwares e aplicações de geoprocessamento e afins. Elaboração de informações básicas, <br>
                     SIG - Sistema de Informações Geográficas, QGIS - Google Earth Pro, Banco de Dados, Programação( customização de aplicações). <br>
