--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="d-none d-md-block col-md-3 border border-top-0 border-bottom-0 lado">
                 <h3 class="fonte pt-4 text-center mb-5">Portfólio</h3>
                 <div class="border-bottom">
-                    <a href="/Portifolio/curriculo/curriculo.html" ><button class="btn tamanho-btn"><i class="bi bi-card-text fs-4"><p class="ps-3 curriculo">Curriculo</p></i></button></a>
+                    <a href="/Portifolio/curriculo/curriculo.html" ><button class="btn tamanho-btn mt-3"><i class="bi bi-card-text fs-4"><p class="ps-3 curriculo">Curriculo</p></i></button></a>
                 </div>
                 <div class="border-bottom ">
                     <a href="/Portifolio/arquivosC/c.html" ><button class="btn tamanho-btn"><i class="bi bi-award fs-4"></i><p class="ps-3 curriculo">Projetos</p></i></button></a>
@@ -71,7 +71,7 @@
                         <div class="d-none d-md-block d-lg-none col-12 text-center mt-3">
                             <img src="/Portifolio/me.jpg" alt="Minha foto" class="foto-mobile">
                         </div>
-                        <div class="d-none d-lg-block col-lg-4 text-center mt-4 ">
+                        <div class="d-none d-lg-block col-lg-4 text-center mb-3 ">
                             <img src="/Portifolio/me.jpg" alt="Minha foto" class="foto d-inline-flex mt-2 me-3">
                         </div>
                         <div class="col-12 d-lg-none bor">
