Atualizar o index.html
atualizando o caminho dos projetos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a href="/Portifolio/curriculo/curriculo.html"><button class="btn tamanho-btn "><i class="bi bi-card-text fs-4"><p class="ps-3 curriculo">Curriculo</p></i></button></a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Portifolio/arquivosC/c.main"><button class="btn tamanho-btn mt-2"><i class="bi bi-award fs-4"></i></i><p class="ps-3 arquivos-c">Projetos</p></i></button></a>
+                            <a href="/Portifolio/arquivosC/c.html"><button class="btn tamanho-btn mt-2"><i class="bi bi-award fs-4"></i></i><p class="ps-3 arquivos-c">Projetos</p></i></button></a>
                         </li>
                         <li class="nav-item">
                             <a href="https://github.com/SrGuzz"><button class="btn tamanho-btn mt-2"><i class="bi bi-github fs-4"></i><p class="ps-3 arquivos-c">GitHub</p></button></a>
