--- a/arquivosC/c.html
+++ b/arquivosC/c.html
@@ -90,7 +90,7 @@
                         <img src="vrum vrum.png" class="w-50 mb-3" alt="VrumVrum">
                     </div>
                     <div class="text-center">
-                        <a href="/arquivosC/Loja_de_Veiculos.zip"><button class="btn btn-dark mt-2 mb-4"> Baixar</button></a>
+                        <a href="Loja_de_Veiculos.zip"><button class="btn btn-dark mt-2 mb-4"> Baixar</button></a>
                     </div>
                 </div>
 
